--- a/.classpath
+++ b/.classpath
@@ -2,11 +2,16 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry excluding="videoextraction/" kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/opencv"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/opencv">
+		<attributes>
+			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="EasyVision/opencv/build/java"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="lib" path="miglayout15-swing.jar" sourcepath="miglayout-src.zip"/>
 	<classpathentry kind="lib" path="lib/annotations-3.0.1.jar"/>
 	<classpathentry kind="lib" path="lib/guava-27.0.1-jre.jar"/>
 	<classpathentry kind="lib" path="lib/javassist-3.24.1-GA.jar"/>
 	<classpathentry kind="lib" path="lib/reflections-0.9.10.jar"/>
+	<classpathentry kind="lib" path="opencv/build/java/opencv-341.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
