--- a/.classpath
+++ b/.classpath
@@ -24,5 +24,6 @@
 	</classpathentry>
 	<classpathentry kind="lib" path="lib/commons-io-2.6.jar"/>
 	<classpathentry kind="lib" path="lib/gson-2.8.5.jar"/>
+	<classpathentry kind="lib" path="lib/bluecove-2.1.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
